Bug 1249579 - part1 : request audio focus on Fennec. r=snorp.

MozReview-Commit-ID: 45qW0Wjmnad

--HG--
extra : transplant_source : %C0%D5%AE%95m%89cW%E9%F6oK%0F%BBm%8E%BD%C2%2A9